--- a/envoai_react_test/src/index.css
+++ b/envoai_react_test/src/index.css
@@ -66,3 +66,9 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+@media (max-width: 425px) {
+  :root {
+    font-size: 0.7em;
+  }
+}
